syntax = "proto3";

option go_package = "fileupload.v1; fileuploadv1";

package fileupload;

message UploadChunkRequest {
  string filename = 1;
  int64 chunk_id = 2;
  int64 offset = 3;
  bytes data = 4;
}

message UploadChunkResponse {
  int64 received_bytes = 1;
}

message CompleteFileRequest {
  string filename = 1;
  int64 total_chunks = 2;
}

message CompleteFileResponse {
  string message = 1;
}

service FileService {
  rpc UploadChunk (stream UploadChunkRequest) returns (UploadChunkResponse){}
  rpc CompleteFile (CompleteFileRequest) returns (CompleteFileResponse){}
}